# cascette-rs

./: .gitignore  .markdownlint.jsonc  .mise.toml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md  deny.toml  mise.toml
crates/cascette-agent/: Cargo.toml  OBSERVABILITY.md  README.md  build.rs
crates/cascette-agent/examples/: agent_verification.rs
crates/cascette-agent/src/: config.rs  error.rs  lib.rs  main.rs  observability.rs  process_detection.rs  session.rs
crates/cascette-agent/src/executor/: backfill.rs  context.rs  extract.rs  factory.rs  helpers.rs  install.rs  mod.rs  progress_adapter.rs  repair.rs  runner.rs  uninstall.rs  update.rs  verify.rs
crates/cascette-agent/src/handlers/: agent.rs  agent_download.rs  backfill.rs  content.rs  download.rs  extract.rs  game.rs  gamesession.rs  hardware.rs  health.rs  install.rs  metrics.rs  mod.rs  option.rs  override_config.rs  priorities.rs  progress.rs  register.rs  repair.rs  size_estimate.rs  spawned.rs  uninstall.rs  update.rs  version.rs
crates/cascette-agent/src/models/: mod.rs  operation.rs  product.rs  progress.rs
crates/cascette-agent/src/observability/: logging.rs  metrics.rs  middleware.rs  mod.rs  tracing.rs
crates/cascette-agent/src/server/: mod.rs  models.rs  router.rs
crates/cascette-agent/src/state/: db.rs  mod.rs  queue.rs  registry.rs  size_cache.rs
crates/cascette-agent/tests/: executor_tests.rs  handler_tests.rs  lifecycle_test.rs  wow_classic_install.rs  wow_classic_update.rs  wow_classic_update_noop.rs
crates/cascette-agent/tests/common/: mod.rs
crates/cascette-cli/: Cargo.toml  README.md
crates/cascette-cli/src/: cache.rs  config.rs  lib.rs  main.rs  paths.rs
crates/cascette-cli/src/fdid/: analyze.rs  batch.rs  browse.rs  commands.rs  mod.rs  profile.rs  resolve.rs  search.rs  stats.rs  validate.rs
crates/cascette-cli/src/imports/: mod.rs
crates/cascette-cli/src/installation/: mod.rs
crates/cascette-cli/src/products/: helper_functions.rs  mod.rs  tests.rs
crates/cascette-cli/src/tact/: commands.rs  manager.rs  mod.rs
crates/cascette-client-storage/: Cargo.toml  README.md
crates/cascette-client-storage/examples/: extract_by_content_key.rs  local_verification.rs
crates/cascette-client-storage/src/: archive.rs  index.rs  installation.rs  lib.rs  resolver.rs  shmem.rs  storage.rs  storage_manager.rs  validation.rs
crates/cascette-client-storage/src/container/: dynamic.rs  hardlink.rs
crates/cascette-client-storage/src/index/: mod.rs
crates/cascette-client-storage/src/kmt/: key_state.rs  kmt_file.rs  mod.rs
crates/cascette-client-storage/src/shmem/: legacy.rs  platform_unix.rs
crates/cascette-client-storage/src/storage/: archive_file.rs  local_header.rs  segment.rs
crates/cascette-containerless/: Cargo.toml  README.md
crates/cascette-containerless/examples/: containerless_encrypted.rs  containerless_storage.rs  containerless_verification.rs
crates/cascette-containerless/src/: bgdl.rs  block_mover.rs  config.rs  eheader.rs  error.rs  lib.rs  loose.rs  residency.rs  sparse.rs  storage.rs
crates/cascette-containerless/src/db/: crypto.rs  files.rs  meta.rs  mod.rs  schema.rs  tags.rs
crates/cascette-containerless/src/product_db/: mod.rs
crates/cascette-crypto/: Cargo.toml
crates/cascette-crypto/examples/: armadillo_keys.rs  crypto_primitives.rs  salsa20_encryption.rs  tact_keyring.rs
crates/cascette-crypto/src/: armadillo.rs  error.rs  generate.rs  lib.rs  murmur3.rs  store_trait.rs
crates/cascette-formats/: Cargo.toml  README.md
crates/cascette-formats/examples/: archive_index.rs  binary_patches.rs  blte_encoding.rs  encoding_table.rs  manifests.rs  parse_build_config.rs  root_file.rs
crates/cascette-formats/src/: lib.rs  patch_chain.rs  test_utils.rs
crates/cascette-formats/src/archive/: archive_group.rs  file.rs  (+2 more)
crates/cascette-formats/tests/: blte_fixtures.rs  bpsv_fixtures.rs
crates/cascette-import/: Cargo.toml  README.md
crates/cascette-import/examples/: blizztrack_verification.rs  import_community_data.rs  listfile_name_lookup.rs  wago_verification.rs
crates/cascette-import/src/: blizztrack.rs  error.rs  lib.rs  listfile.rs  manager.rs  providers.rs  tactkeys.rs  tactkeys_fetch.rs  wago.rs
crates/cascette-import/tests/: listfile_tests.rs
crates/cascette-installation/: Cargo.toml  README.md
crates/cascette-installation/examples/: install_product.rs  verify_installation.rs
crates/cascette-installation/src/: archive_optimizer.rs  atomic_writer.rs  battlenet.rs  battlenet_archive_group.rs  cdn_source.rs  checkpoint.rs  config.rs  endpoint_scorer.rs  error.rs  executor.rs  extract.rs  lib.rs  manifest_fetcher.rs  metadata.rs  mirror.rs  models.rs  plan.rs  plan_ngdp.rs  progress.rs  progress_tracker.rs  repair.rs  resume.rs  retry.rs  verify.rs
crates/cascette-installation/tests/: mirror_tests.rs
crates/cascette-maintenance/: Cargo.toml  README.md
crates/cascette-maintenance/examples/: maintenance_analysis.rs  maintenance_verification.rs
crates/cascette-maintenance/src/: error.rs  gc.rs  lib.rs  preservation.rs  report.rs
crates/cascette-metadata/: Cargo.toml  README.md
crates/cascette-metadata/examples/: metadata_orchestrator.rs
crates/cascette-metadata/src/: content.rs  error.rs  fdid.rs  lib.rs  orchestrator.rs
crates/cascette-proto/: Cargo.toml  README.md  build.rs
crates/cascette-proto/proto/: proto_database.proto
crates/cascette-proto/src/: lib.rs
crates/cascette-proto/test_fixtures/: wow_classic_1.13.2.product.db  wow_classic_1.14.0.product.db  wow_classic_1.15.2_macos.product.db
crates/cascette-proto/tests/: real_product_db.rs
crates/cascette-protocol/: Cargo.toml  README.md
crates/cascette-protocol/examples/: build_file_tree.rs  cdn_archive_sizes.rs  cdn_chain_verification.rs  cdn_protocol_verification.rs  dump_product_info.rs  wow_classic_native.rs  wow_classic_wasm.rs
crates/cascette-protocol/src/: archive_client.rs  cache.rs  config.rs  error.rs  lib.rs  mime_parser.rs  optimized.rs  retry.rs
crates/cascette-protocol/tests/: cdn_bootstrap_tests.rs
tact-client/: Cargo.toml
(+263 files in other folders)
