[package]
name = "cascette-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local HTTP agent service compatible with Blizzard Agent.exe (port 1120)"
readme = "README.md"
keywords = ["casc", "agent", "ngdp", "tact", "server"]
categories = ["network-programming", "game-development", "web-programming::http-server"]

[lib]
name = "cascette_agent"
path = "src/lib.rs"

[[bin]]
name = "cascette-agent"
path = "bin/cascette-agent.rs"

[dependencies]
# Internal dependencies
cascette-import = { version = "0.2.0", path = "../cascette-import" }
cascette-installation = { version = "0.2.0", path = "../cascette-installation" }
cascette-protocol = { version = "0.2.0", path = "../cascette-protocol" }
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }
cascette-crypto = { version = "0.2.0", path = "../cascette-crypto" }
cascette-client-storage = { version = "0.2.0", path = "../cascette-client-storage" }
cascette-maintenance = { version = "0.2.0", path = "../cascette-maintenance" }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# HTTP server
axum.workspace = true
tower-http = { workspace = true, features = ["timeout"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
turso.workspace = true

# CLI
clap.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Identifiers and time
uuid.workspace = true
chrono.workspace = true

# System information
sysinfo.workspace = true

# Async traits
async-trait.workspace = true

# Binary parsing (for BLTE container reads)
binrw.workspace = true

# Utilities
hex.workspace = true

[dev-dependencies]
#tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
#tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
#wiremock.workspace = true
#reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true

[[example]]
name = "agent_verification"
path = "examples/agent_verification.rs"

[lints]
workspace = true
