[package]
name = "cascette-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Community-driven NGDP Swiss Army Knife - CLI for Blizzard game management"
keywords = ["ngdp", "casc", "blizzard", "warcraft", "cli"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "cascette"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal output components
indicatif = "0.17"   # For progress bars and spinners
console = "0.15"     # For styled terminal output
comfy-table = "7.1"  # For formatted table display

# Configuration and storage
dirs = "5.0"         # Platform-specific directories
config = "0.15"      # Configuration file management
serde = { version = "1.0", features = ["derive"] }  # For config serialization
serde_json = "1.0"   # JSON serialization for build metadata
toml = "0.8"         # TOML configuration file format
chrono = { version = "0.4", features = ["serde"] }  # Date/time handling

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Internal workspace dependencies
cascette-formats = { path = "../cascette-formats" }
cascette-crypto = { path = "../cascette-crypto", features = ["keyring", "file-store"] }
cascette-protocol = { path = "../cascette-protocol" }
cascette-cache = { path = "../cascette-cache" }
cascette-import = { path = "../cascette-import" }
cascette-metadata = { path = "../cascette-metadata", features = ["import"] }
cascette-client-storage = { path = "../cascette-client-storage" }
cascette-installation = { path = "../cascette-installation" }
bincode = "2.0.1"
binrw = { workspace = true }
walkdir = "2.5.0"
hex = { workspace = true }
md5 = { workspace = true }
regex = "1.10"

# Installation module dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }

# Development dependencies
[dev-dependencies]
tempfile = "3.15"
proptest = "1.6"
mockall = "0.13"

[package.metadata.cargo-machete]
# These dependencies are used or will be used when cache integration is complete
ignored = ["cascette-cache", "thiserror"]

[lints]
workspace = true
