[package]
name = "cascette-crypto"
description = "Cryptographic operations for NGDP/CASC system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["crypto", "casc", "ngdp", "blizzard", "wow"]
categories = ["cryptography", "games"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Hashing
md-5 = "0.10"

# Encryption
salsa20 = "0.10"
cipher = "0.4"

# Random number generation (for key/IV generation)
getrandom = { workspace = true }

# Utilities
hex = { workspace = true }

# Platform paths
dirs = "6"

# Binary format handling
binrw = { workspace = true }

[dev-dependencies]
# Testing framework
criterion = { workspace = true }
tempfile = { workspace = true }

[package.metadata.cargo-machete]
# These dependencies are used indirectly or for specific features
ignored = ["cipher", "md-5"]

[lints]
workspace = true

[[example]]
name = "crypto_primitives"
path = "examples/crypto_primitives.rs"

[[example]]
name = "salsa20_encryption"
path = "examples/salsa20_encryption.rs"

[[example]]
name = "tact_keyring"
path = "examples/tact_keyring.rs"

[[example]]
name = "armadillo_keys"
path = "examples/armadillo_keys.rs"
