[package]
name = "cascette-installation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CASC/NGDP installation library for Battle.net games"
keywords = ["blizzard", "casc", "ngdp", "installation", "games"]
categories = ["game-development", "filesystem"]

[lints]
workspace = true

[dependencies]
# Internal cascette crates
cascette-formats = { path = "../cascette-formats" }
cascette-protocol = { path = "../cascette-protocol" }
cascette-cache = { path = "../cascette-cache" }
cascette-client-storage = { path = "../cascette-client-storage" }
cascette-metadata = { path = "../cascette-metadata", features = ["import"] }
cascette-crypto = { path = "../cascette-crypto" }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Binary format handling
binrw.workspace = true

# Date/time
chrono = "0.4"

# Utilities
futures.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
indicatif.workspace = true
hex.workspace = true
md5.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
